--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.0'
     implementation 'com.github.d-max:spots-dialog:0.7@aar'
     implementation 'com.baoyz.pullrefreshlayout:library:1.2.0'
-    implementation 'com.android.support:support-v4:28.0.0-rc02'
+    implementation 'com.android.support:support-v4:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha2'
     implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
     implementation 'com.android.support:design:28.0.0-rc02'
