--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0'
@@ -12,6 +14,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+       
+        maven { url "https://jitpack.io" }
     }
 
 }
