--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "vn.lcsoft.luongchung.tluschedule"
         minSdkVersion 15
         targetSdkVersion 27
-        versionCode 9
-        versionName "1.9"
+        versionCode 11
+        versionName "2.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -21,23 +21,20 @@ android {
 dependencies {
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'org.jsoup:jsoup:1.11.3'
-    implementation 'com.squareup.picasso:picasso:2.5.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.github.d-max:spots-dialog:0.7@aar'
     implementation 'com.baoyz.pullrefreshlayout:library:1.2.0'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha2'
-    implementation 'com.google.firebase:firebase-core:11.6.2'
-    implementation 'com.google.firebase:firebase-messaging:11.6.2'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.android.gms:play-services-ads:17.1.0'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
-    implementation 'com.google.firebase:firebase-database:11.6.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.google.firebase:firebase-database:16.0.4'
+
+
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
 }
 
 apply plugin: 'com.google.gms.google-services'
