--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,17 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0'
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.google.gms:google-services:4.2.0'
     }
 }
 allprojects {
     repositories {
         google()
         jcenter()
-       
-        maven { url "https://jitpack.io" }
+
+        maven {
+            url "https://maven.google.com"
+        }
     }
 
 }
